--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 }
-
+@media (max-width: 2500px){
 @keyframes barra {
   0% {
     left: 100%;
@@ -52,7 +52,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap");
 
 html {
-  height: 100%;
+  /* height: 100%; */
   font-size: 62.5%;
 }
 
@@ -106,7 +106,7 @@ body {
 }
 
 #menu {
-  height: 100px;
+  height: 10rem;
   align-self: center;
   /* justify-self: flex-start; */
 }
@@ -124,7 +124,7 @@ body {
 
 .textonav {
   font-family: "Six Caps", sans-serif;
-  font-size: 100px;
+  font-size: 10rem;
   color: #393838;
 }
 
@@ -135,14 +135,14 @@ a:link, a:visited {
 
 .pagina1 {
   display: grid;
-  grid-template: 1fr / 70% 1fr;
+  grid-template: 1fr / 1fr 640px;
   /* justify-content: space-evenly; */
-  height: calc(100vh - 131px);
+  height: calc(100vh - 13.1rem);
 }
 
 .capa {
   /* width: 300px; */
-  height: 700px;
+  height: 70rem;
   justify-self: center;
   width: 100%;
   height: 100%;
@@ -150,15 +150,22 @@ a:link, a:visited {
 
 .textop1 {
   text-align: center;
-  justify-self: center;
-  font-size: 3rem;
+  /* justify-self: center; */
+  font-size: 2.5rem;
   color: #1f1f1f;
   align-self: center;
   font-family: "Fjalla One", sans-serif;
   text-transform: uppercase;
-  width: 50rem;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
-
+.textop1 p{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .ativo {
   background-color: red;
 }
@@ -223,4 +230,42 @@ a:link, a:visited {
   top: 100%;
 
 }
-
+@media (max-width: 1140px){
+  html{
+    font-size: 60%;
+  }
+  .textop1{
+    background-color: pink;
+  }
+}
+@media (max-width: 920px){
+  html{
+    font-size: 50%;
+  }
+}
+@media (max-width: 820px){
+  html{
+    font-size: 35%;
+  }
+} 
+@media (max-width: 800px){
+  .textop1{
+    display: none;
+  }
+  .pagina1{
+    grid-template: 1fr/1fr;
+    height: calc(100vh - 13.1rem);
+  }
+  .navegacao{
+    height: 13.1rem;
+  }
+} 
+@media (max-width: 640px){
+  .pagina1{
+    height: calc(100vh - 16.1rem);
+  } 
+  .navegacao{
+    height: 16.1rem;
+  }
+}
+}
